implement random forest and xgboost algo

--- a/Project_Raj_Durg.ipynb
+++ b/Project_Raj_Durg.ipynb
@@ -33,8 +33,8 @@
    },
    "outputs": [],
    "source": [
-    "#from google.colab import drive\n",
-    "#drive.mount('/content/drive')"
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')"
    ]
   },
   {
@@ -50,19 +50,7 @@
    },
    "outputs": [],
    "source": [
-    "#%cd /content/drive/My Drive/Colab Notebooks/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "lll-t0SsvUih",
-   "metadata": {
-    "id": "lll-t0SsvUih"
-   },
-   "outputs": [],
-   "source": [
-    "df = pd.read_parquet(\"/Users/ironfeast/Desktop/projectDM/Project-kumar13-wcutchin-dutiwar/202304.parquet\")"
+    "%cd /content/drive/My Drive/Colab Notebooks/"
    ]
   },
   {
